--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
