--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@radix-ui/themes": "^2.0.0",
     "@supabase/supabase-js": "^2.36.0",
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "next": "13.4.19",
@@ -21,7 +20,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.4",
+    "@types/react": "^18.2.27",
+    "typescript": "^5.2.2"
   }
 }
