--- a/package.json
+++ b/package.json
@@ -9,23 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.3.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.4.2",
     "@radix-ui/themes": "^2.0.0",
     "@supabase/supabase-js": "^2.36.0",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
     "next": "13.4.19",
+    "next-auth": "^4.23.2",
     "postcss": "8.4.29",
-    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.27",
+    "prisma": "^5.4.2",
     "typescript": "^5.2.2"
   }
 }
