--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.4.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^2.0.0",
     "@supabase/supabase-js": "^2.36.0",
