--- a/package.json
+++ b/package.json
@@ -20,19 +20,16 @@
     "@radix-ui/themes": "^2.0.0",
     "@supabase/supabase-js": "^2.36.0",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.287.0",
     "next": "13.4.19",
     "next-auth": "^4.23.2",
-    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
@@ -40,7 +37,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.27",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "prisma": "^5.4.2",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
 }
