--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^2.0.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "@supabase/supabase-js": "^2.38.4",
     "@types/react-dom": "18.2.15",
     "bcrypt": "^5.1.1",
@@ -28,6 +29,8 @@
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
