--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
+    "react-resizable-panels": "^1.0.4",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
